Criando primeiras váriaveis

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Inovatech</title>
 </head>
 <body>
-    <h1>Inovatech</h1>
+    <div id="Title">
+        <h1>Inovatech</h1>
+    </div>
 </body>
 <script src="./index.js"></script>
 </html>
