--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="Title">
-        <h1>Inovatech</h1>
+        <h1 id="TitleText">Inovatech</h1>
     </div>
 </body>
 <script src="./index.js"></script>
