Estilização da página de soluções

--- a/solucoes.html
+++ b/solucoes.html
@@ -15,47 +15,56 @@
         <div class="solucoes-container">
             <div class="box box-um">
                 <div class="inner">
-                    <h3>ADMINISTRAÇÃO</h3>
+                    <h3>Administração</h3>
+                    <button type="button">Saiba mais</button></a>
                 </div>
             </div>
             <div class="box box-dois">
                 <div class="inner">
-                    <h3>ARQUITERTURA</h3>
+                    <h3>Arquitetura</h3>
+                    <button type="button">Saiba mais</button></a>
                 </div>
             </div>
             <div class="box box-tres">
                 <div class="inner">
-                    <h3>CONTABILIDADE</h3>
+                    <h3>Contabilidade</h3>
+                    <button type="button">Saiba mais</button></a>
                 </div>
             </div>
             <div class="box box-quatro">
                 <div class="inner">
-                    <h3>DIREITO</h3>
+                    <h3>Direito</h3>
+                    <button type="button">Saiba mais</button></a>
                 </div>
             </div>
             <div class="box box-cinco">
                 <div class="inner">
-                    <h3>ENGENHARIA</h3>
+                    <h3>Engenharia</h3>
+                    <button type="button">Saiba mais</button></a>
                 </div>
             </div>
             <div class="box box-seis">
                 <div class="inner">
-                    <h3>FINANÇAS</h3>
+                    <h3>Finanças</h3>
+                    <button type="button">Saiba mais</button></a>
                 </div>
             </div>
             <div class="box box-sete">
                 <div class="inner">
-                    <h3>INFORMÁTICA</h3>
+                    <h3>Informática</h3>
+                    <button type="button">Saiba mais</button></a>
                 </div>
             </div>
             <div class="box box-oito">
                 <div class="inner">
-                    <h3>MARKETING</h3>
+                    <h3>Marketing</h3>
+                    <button type="button">Saiba mais</button></a>
                 </div>
             </div>
             <div class="box box-nove">
                 <div class="inner">
-                    <h3>VENDAS</h3>
+                    <h3>Vendas</h3>
+                    <button type="button">Saiba mais</button></a>
                 </div>
             </div>
         </div>
