Editando e refatorando o css da página principal

--- a/index.html
+++ b/index.html
@@ -13,5 +13,100 @@
 </head>
 <body>
     
+    <!---MENU--->
+	<header>
+		<a href="#" class="logo"><img src="img/logo.png"></a>
+		<div class="bx bx-menu" id="menu-icon"></div>
+
+		<ul class="navbar">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="portfolio.html">Portfólio</a></li>
+			<li><a href="contato.html">Contato</a></li>
+		</ul>
+	</header>
+
+    <!---BANNER PRINCIPAL DA PÁGINA INICIAL--->
+	<section class="home" id="home">
+		<div class="home-text">
+			<h4>Olá, seja bem-vindo!</h4>
+			<h1>Nós somos a <br> Inova<span>Tech</span></h1>
+			<h3>Especialistas em desenvolvimento<br>de softwares corporativos</h3>
+			<a href="#about" class="btn">Saiba mais</a>
+		</div>
+	</section>
+
+    <!---SOBRE NÓS--->
+	<section class="about" id="about">
+		<div class="about-img">
+			<img src="img/about.png">
+		</div>
+
+		<div class="about-text">
+			<h2>Sobre Nós</h2>
+			<h4>Nosso foco é ajudar você e sua empresa a crescer!</h4>
+			<p>Somos especialistas no desenvolvimentos de aplicações para fins corporativos e comerciais, atendendo empresas e profissionais das mais diversas áreas, focando sempre no desenvolvimento de aplicações eficientes e de fácil entendimento.</p>
+			<a href="#" class="btn">Contate-nos</a>
+		</div>
+	</section>
+
+    <!---NOSSOS SERVIÇOS--->
+	<section class="services" id="services">
+		<div class="main-text">
+			<h2>Nossos serviços</h2>
+			<h4>Desenvolvimento Web, Desktop, Mobile e Design</h4>
+		</div>
+
+		<div class="services-content">
+			<div class="box">
+				<img src="img/serv1.png">
+				<h3>Desenvolvimento Mobile</h3>
+				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
+			</div>
+
+			<div class="box">
+				<img src="img/serv2.png">
+				<h3>Web Front-End</h3>
+				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
+			</div>
+
+			<div class="box">
+				<img src="img/serv3.png">
+				<h3>Web Back-End</h3>
+				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
+			</div>
+
+            <div class="box">
+				<img src="img/serv3.png">
+				<h3>Desenvolvimento Desktop</h3>
+				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
+			</div>
+
+            <div class="box">
+				<img src="img/serv3.png">
+				<h3>UI/UX Design</h3>
+				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
+			</div>
+
+            <div class="box">
+				<img src="img/serv3.png">
+				<h3>Design de Interfaces</h3>
+				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
+			</div>
+
+		</div>
+	</section>
+
+    <div class="last-text">
+		<p>Todos os direitos reservados. Desenvolvido por InovaTech © 2022</p>
+	</div>
+
+	<!---scroll-top--->
+	<a href="#" class="top"><i class='bx bx-up-arrow-alt' ></i></a>
+
+	<script src="https://unpkg.com/scrollreveal"></script>
+
+	<!---custom js link--->
+	<script type="text/javascript" src="js/script.js"></script>
+
 </body>
 </html>
