Corrigindo html e css da seção de serviços e do rodapé

--- a/index.html
+++ b/index.html
@@ -58,37 +58,37 @@
 
 		<div class="services-content">
 			<div class="box">
-				<img src="img/serv1.png">
+				<img src="img/service-mobile.svg">
 				<h3>Desenvolvimento Mobile</h3>
 				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
 			</div>
 
 			<div class="box">
-				<img src="img/serv2.png">
+				<img src="img/service-front.svg">
 				<h3>Web Front-End</h3>
 				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
 			</div>
 
 			<div class="box">
-				<img src="img/serv3.png">
+				<img src="img/service-back.svg">
 				<h3>Web Back-End</h3>
 				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
 			</div>
 
             <div class="box">
-				<img src="img/serv3.png">
+				<img src="img/service-desktop.svg">
 				<h3>Desenvolvimento Desktop</h3>
 				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
 			</div>
 
             <div class="box">
-				<img src="img/serv3.png">
+				<img src="img/service-ux-ui.svg">
 				<h3>UI/UX Design</h3>
 				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
 			</div>
 
             <div class="box">
-				<img src="img/serv3.png">
+				<img src="img/service-design.svg">
 				<h3>Design de Interfaces</h3>
 				<p>Lorem Ipsum Is Simply Dummy Text Of The Printing Andtypesetting Industry. Lorem Ipsum Has Been The Website Industry's Standard Dummy .</p>
 			</div>
