Corrigindo erros na página de contato

--- a/contato.html
+++ b/contato.html
@@ -39,9 +39,7 @@
 			<div class="contact-icons">
 				<a href="#"><i class='bx bxl-linkedin' ></i></a>
 				<a href="#"><i class='bx bxl-facebook' ></i></a>
-				<a href="#"><i class='bx bxl-behance' ></i></a>
 				<a href="#"><i class='bx bxl-instagram' ></i></a>
-				<a href="#"><i class='bx bxl-dribbble' ></i></a>
 			</div>
 		</div>
 
@@ -51,7 +49,7 @@
 				<input type="email" placeholder="Insira seu e-mail" required>
 				<input type="" placeholder="Assunto">
 				<textarea name="" id="" cols="40" rows="10" placeholder="Sua mensagem" required></textarea>
-				<input type="submit" value="Submit" class="send">
+				<input type="submit" value="Enviar" class="send">
 			</form>
 		</div>
 	</section>
