Corrigindo erro na logo do menu

--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,7 @@
     
     <!---MENU--->
 	<header>
-		<a href="#" class="logo"><img src="img/logo.png"></a>
+		<a href="index.html" class="logo"><img src="img/logo-menu.png"></a>
 		<div class="bx bx-menu" id="menu-icon"></div>
 
 		<ul class="navbar">
