--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     
     <!---MENU--->
 	<header>
-		<a href="#" class="logo"><img src="img/logo.png"></a>
+		<a href="index.html" class="logo"><img src="img/logo-menu.png"></a>
 		<div class="bx bx-menu" id="menu-icon"></div>
 
 		<ul class="navbar">
@@ -47,16 +47,16 @@
 			</div>
 
 			<div class="row">
-				<img src="img/portfolio1.jpg">
+				<img src="img/portfolio2.jpg">
 				<div class="main-row">
 					<div class="row-text">
-						<h6>Mobile</h6>
+						<h6>Desenvolvimento Web</h6>
 					</div>
 					<div class="row-icon">
 						<i class='bx bx-heart'></i>
 					</div>
 				</div>
-				<h3>Aplicativo mobile com design de landing page</h3>
+				<h3>Desenvolvimento de website para profissional de psicologia</h3>
 			</div>
 
 			<div class="row">
@@ -73,16 +73,16 @@
 			</div>
 
 			<div class="row">
-				<img src="img/portfolio1.jpg">
+				<img src="img/portfolio2.jpg">
 				<div class="main-row">
 					<div class="row-text">
-						<h6>Mobile</h6>
+						<h6>Desenvolvimento Web</h6>
 					</div>
 					<div class="row-icon">
 						<i class='bx bx-heart'></i>
 					</div>
 				</div>
-				<h3>Aplicativo mobile com design de landing page</h3>
+				<h3>Desenvolvimento de website para profissional de psicologia</h3>
 			</div>
 
 		</div>
